--- a/helm/aws-eks/axway-apim-on-aws-eks-values.yaml
+++ b/helm/aws-eks/axway-apim-on-aws-eks-values.yaml
@@ -4,7 +4,7 @@ global:
 
   domainName: "axway-apim-on-eks.de"
   dockerRepository: "ghcr.io/cwiechmann/axway-api-management-automated"
-  imageTag: "77-20210830-1-f6d7085"
+  imageTag: "77-20211130-1-eed8beb"
 
 ##################################################################################################################################
 #   A D M I N - N O D E M A N A G E R
@@ -24,12 +24,20 @@ anm:
         # 302 is also accepted, as Kibana is performing a redirect
         alb.ingress.kubernetes.io/success-codes: 200,302
 
+   resources:
+      requests:
+         cpu: "200m"
+         memory: "500Mi"
+      limits:
+         cpu: "500m"
+         memory: "700Mi"
+
 ##################################################################################################################################
 #   API MANAGER
 ##################################################################################################################################
 apimgr:
    enabled: true
-   imageTag: 77-20210830-v1-1161c0c
+   imageTag: 77-20211130-v1-eed8beb
    ingress:
       enabled: true
       annotations: 
@@ -48,7 +56,7 @@ apimgr:
 ##################################################################################################################################
 apitraffic:
    enabled: true
-   imageTag: 77-20210830-v1-1161c0c
+   imageTag: 77-20211130-v1-eed8beb
    ingress:
       enabled: true
       name: traffic
@@ -96,7 +104,6 @@ apitraffic:
            mountPath: /var/events/
          - name: audit
            mountPath: /var/audit/
-           
 
    extraVolumes:
       - name: filebeat-config
@@ -116,7 +123,7 @@ apitraffic:
 apiportal:
    enabled: true
    image: portal
-   imageTag: 7.7-20210830
+   imageTag: 7.7-20211130
    dockerRepository: docker-registry.demo.axway.com/other-demo
    ingress:
       enabled: true
@@ -132,13 +139,23 @@ apiportal:
 
    redis:
       enabled: false
-      internal: true
+      internal: false
 
 ##################################################################################################################################
 #   INTERNAL CASSANDRA DATABASE
 ##################################################################################################################################
 cassandra:
    internal: true
+   jvm:
+      maxHeapSize: 1024m
+      newHeapSize: 200m
+   resources:
+      requests:
+         cpu: 1
+         memory: 2Gi
+      limits:
+         cpu: 2
+         memory: 2Gi
 
 ##################################################################################################################################
 #   INTERNAL ANALYTICS/METRICS DATABASE
