--- a/helm/aws-eks/apim-elk-on-aws-eks-values.yaml
+++ b/helm/aws-eks/apim-elk-on-aws-eks-values.yaml
@@ -14,6 +14,7 @@ apibuilder4elastic:
 # Enable, if you would like to deploy a new Elasticsearch cluster for the solution
 elasticsearch:
   enabled: true
+  imageTag: "7.16.1"
   extraInitContainers: [] # To be removed on release after 3.2.0
   volumeClaimTemplate:
     accessModes: [ "ReadWriteOnce" ]
@@ -36,6 +37,7 @@ elasticsearch:
 # Enable, if you would like to deploy Kibana for the solution
 kibana:
   enabled: true
+  imageTag: "7.16.1"
   ingress:
     # Annotations used to expose Kibana on an AWS-ALB
     # See here for more information
@@ -64,6 +66,7 @@ kibana:
 
 logstash:
   replicas: 1
+  imageTag: "7.16.1"
   logstashJavaOpts: "-Xmx6g -Xms6g"
   resources:
     requests:
@@ -76,6 +79,7 @@ logstash:
 filebeat: 
   # Only create the ConfigMaps which are used by Filebeat running along the API-Gateways as a side-car
   createFilebeatConfig: true
+  imageTag: "7.16.1"
 
   elasticsearchClusterUUID: 3hxrsNg6QXq2wSkVWGTD4A
 
