--- a/helm/aws-eks/apim-elk-on-aws-eks-values.yaml
+++ b/helm/aws-eks/apim-elk-on-aws-eks-values.yaml
@@ -8,13 +8,26 @@ apibuilder4elastic:
     apimgrUsername: "apiadmin"
     apimgrPassword: "axway123"
 
+  validateElasticsearchCertificate: "false"
+
   apmserver:
     verifyServerCert: "false"
-  # logLevel: debug
+  logLevel: debug
+  retentionPeriodConfig: "./config/my-retention-period.json"
+
+  extraVolumes:
+    - name: retentionperiod
+      configMap:
+        name: retentionperiod
+
+  extraVolumeMounts: 
+    - name: retentionperiod
+      mountPath: /app/config/
+
 # Enable, if you would like to deploy a new Elasticsearch cluster for the solution
 elasticsearch:
   enabled: true
-  imageTag: "7.16.2"
+  # imageTag: "7.16.2"
   replicas: 3
   extraInitContainers: [] # To be removed on release after 3.2.0
   volumeClaimTemplate:
@@ -43,7 +56,8 @@ elasticsearch:
 # Enable, if you would like to deploy Kibana for the solution
 kibana:
   enabled: true
-  imageTag: "7.16.2"
+  # imageTag: "7.16.2"
+  validateElasticsearchCertificate: "none"
   ingress:
     className: ""
     # Annotations used to expose Kibana on an AWS-ALB
@@ -73,8 +87,9 @@ kibana:
 
 logstash:
   replicas: 2
-  imageTag: "7.16.2"
+  # imageTag: "7.16.2"
   logstashJavaOpts: "-Xmx6g -Xms6g"
+  validateElasticsearchCertificate: "none"
   resources:
     requests:
       cpu: "2000m"
@@ -86,17 +101,23 @@ logstash:
 filebeat: 
   # Only create the ConfigMaps which are used by Filebeat running along the API-Gateways as a side-car
   createFilebeatConfig: true
-  imageTag: "7.16.2"
+  # imageTag: "7.16.2"
 
   elasticsearchClusterUUID: i1djDUVbTcKj2ySgf1PCmg
 
+  validateElasticsearchCertificate: "none"
+
   filebeatSecrets: 
     beatsSystemUsername: ""
+
+  compressionLevel: 9
 
 apm-server:
   enabled: true
 
   elasticsearchClusterUUID: i1djDUVbTcKj2ySgf1PCmg
+
+  validateElasticsearchCertificate: "none"
 
   resources:
     requests:
