Copied relevant gateway-config changes from fork into main repo

--- a/gateway-config/apimgr/merge-dir/apigateway/webapps/apiportal/vordel/apiportal/app/app.config
+++ b/gateway-config/apimgr/merge-dir/apigateway/webapps/apiportal/vordel/apiportal/app/app.config
@@ -211,6 +211,26 @@ dojoConfig.app = {
                     {value: false, label: 'False'}
                 ]
             },
+            ODataApi: {
+                label: 'OData API',
+                required: false,
+                help: "Set to true, if this API is an OData API",
+                type: "switch",
+                options: [
+                    {value: true, label: 'True'},
+                    {value: false, label: 'False'}
+                ]
+            },
+            validateRequest: {
+                label: 'Validate request',
+                required: false,
+                help: "If true, the request will be checked against OpenAPI Schema definition.",
+                type: "switch",
+                options: [
+                    {value: true, label: 'True'},
+                    {value: false, label: 'False'}
+                ]
+            },
             securityLevel: {
                 label: 'Security level',
                 required: true,
