--- a/.github/workflows/gateway.apimgr.deploy.yml
+++ b/.github/workflows/gateway.apimgr.deploy.yml
@@ -3,11 +3,16 @@ name: Deploy API-Manager
 env:
   dockerRegistry: ghcr.io
   dockerRepository: cwiechmann/axway-api-management-automated
-  baseImage: "base:77-20210830-1"
-  outImage: "manager:77-20210830-v1"
+  baseImage: "base:77-20220228-1"
+  outImage: "manager:77-20220228-v1"
 
 on:
   push:
+    branches:
+      - main
+    paths:
+      - gateway-config/apimgr/**
+  pull_request:
     branches:
       - main
     paths:
@@ -46,9 +51,9 @@ jobs:
           jar tvf apimanager.fed
       - name: Build Manager image
         run: |
-          tar xvfz APIGateway_7.7.20210330-DockerScripts-2.2.0-2.tar.gz
+          tar xvfz apigw-emt-scripts-2.4.0-20220222.150412-10.tar.gz
           echo "${{ secrets.APIGATEWAY_LICENSE }}" | base64 -d > license.lic
-          ./apigw-emt-scripts-2.2.0-2/build_gw_image.py --license=license.lic --merge-dir apimgr/merge-dir/apigateway --default-cert --fed=apimanager.fed --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
+          ./apigw-emt-scripts-2.4.0-SNAPSHOT/build_gw_image.py --license=license.lic --merge-dir apimgr/merge-dir/apigateway --default-cert --fed=apimanager.fed --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
       - name: Push image
         run: |
           docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}-${{ env.IMAGE_TAG }}
