--- a/helm/aws-eks/axway-apim-on-aws-eks-values.yaml
+++ b/helm/aws-eks/axway-apim-on-aws-eks-values.yaml
@@ -4,7 +4,7 @@ global:
 
   domainName: "axway-apim-on-eks.de"
   dockerRepository: "ghcr.io/cwiechmann/axway-api-management-automated"
-  imageTag: "77-20211130-v1-7cdd244"
+  imageTag: "77-20220228-1-b4d1df2"
 
   acceptGeneralConditions: "yes"
 
@@ -13,7 +13,7 @@ global:
 ##################################################################################################################################
 anm:
    enabled: true
-   imageTag: 77-20211130-1-7cdd244
+   imageTag: 77-20220228-1-b4d1df2
    ingress:
       enabled: true
       annotations: 
@@ -44,7 +44,7 @@ anm:
 ##################################################################################################################################
 apimgr:
    enabled: true
-   imageTag: 77-20211130-v1-7cdd244
+   imageTag: 77-20220228-v1-1ec3038
    ingress:
       enabled: true
       annotations: 
@@ -63,8 +63,7 @@ apimgr:
 ##################################################################################################################################
 apitraffic:
    enabled: true
-   imageTag: 77-20211130-v1-7cdd244
-   domainName: xxx.com
+   imageTag: 77-20220228-v1-1ec3038
    ingress:
       enabled: true
       name: traffic
@@ -150,7 +149,7 @@ apitraffic:
 apiportal:
    enabled: true
    image: portal
-   imageTag: 7.7-20211130
+   imageTag: 7.7-20220228
    dockerRepository: docker-registry.demo.axway.com/other-demo
    ingress:
       enabled: true
@@ -311,4 +310,4 @@ pvcs:
       accessModes: [ "ReadWriteOnce" ]
       resources:
          requests:
-            storage: 3Gi
+            storage: 5Gi
