--- a/.github/workflows/gateway.apigw.deploy.yml
+++ b/.github/workflows/gateway.apigw.deploy.yml
@@ -1,10 +1,10 @@
-name: "2.(M) Deploy Admin-Node-Manager"
+name: "1.(M) Deploy API-Gateways"
 
 env:
   dockerRegistry: ghcr.io
   dockerRepository: cwiechmann/axway-api-management-automated
   baseImage: "base:77-20220228-1"
-  outImage: "anm"
+  outImage: "manager"
   outImageVersion: "77-20220228-1"
 
 on:
@@ -14,8 +14,8 @@ on:
         description: 'Version or Date is attached to the created image. If not given, the current date is used.'
         required: false
         type: string 
-      deploy_anm:
-        description: 'Deploy Admin-Node-Manager'
+      deploy:
+        description: 'Deploy API-Manager and API-Gateways'
         required: false
         default: true
         type: boolean 
@@ -25,8 +25,8 @@ defaults:
     working-directory: gateway-config
 
 jobs:
-  create-anm-docker-image:
-    name: Create Admin-Node-Manager image
+  create-apigw-docker-image:
+    name: Create API-Gateway image
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -45,15 +45,15 @@ jobs:
           else 
             date=`echo $(date '+%Y-%m-%d-%H-%M')`
             echo "No version given, using current date: ${date}"
-            echo "IMAGE_TAG=${{ env.outImageVersion }}-$(echo ${date})" >> $GITHUB_ENV
+            echo "IMAGE_TAG=${{ env.outImageVersion }}_$(echo ${date})" >> $GITHUB_ENV
           fi
       - name: Pull base image
         run: docker pull ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }}
-      - name: Build ANM image
+      - name: Build API-Gateway image
         run: |
           tar xvfz apigw-emt-scripts-2.4.0-20220222.150412-10.tar.gz
           echo "${{ secrets.APIGATEWAY_LICENSE }}" | base64 -d > license.lic
-          ./apigw-emt-scripts-2.4.0-SNAPSHOT/build_anm_image.py --license=license.lic --default-cert --fed=anm/fed/anm.fed --metrics --merge-dir anm/merge-dir/apigateway --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
+          ./apigw-emt-scripts-2.4.0-SNAPSHOT/build_gw_image.py --license=license.lic --merge-dir apigateway/merge-dir/apigateway --default-cert --fed=apigateway/fed/apigateway.fed --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
       - name: Push image
         run: |
           docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
@@ -65,13 +65,14 @@ jobs:
           aws-region: eu-west-1
       - name: Update Helm-Value file
         run: |
-          yq -i '.anm.imageTag="${{ env.IMAGE_TAG }}"' ../helm/aws-eks/axway-apim-on-aws-eks-values.yaml
+          yq -i '.apimgr.imageTag="${{ env.IMAGE_TAG }}"' ../helm/aws-eks/axway-apim-on-aws-eks-values.yaml
+          yq -i '.apitraffic.imageTag="${{ env.IMAGE_TAG }}"' ../helm/aws-eks/axway-apim-on-aws-eks-values.yaml
       - name: 'Commit Helm-Values'
         uses: EndBug/add-and-commit@v9
         with:
-          message: 'anm image tag set to ${{ env.IMAGE_TAG }}'
+          message: 'apimgr and apitraffic image tag set to ${{ env.IMAGE_TAG }}'
       - name: Helm upgrade
-        if: ${{ github.event.inputs.deploy_anm }}
+        if: ${{ github.event.inputs.deploy }}
         run: |
           mkdir  $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
