--- a/.github/workflows/gateway.anm.deploy.yml
+++ b/.github/workflows/gateway.anm.deploy.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           tar xvfz apigw-emt-scripts-2.4.0-20220222.150412-10.tar.gz
           echo "${{ secrets.APIGATEWAY_LICENSE }}" | base64 -d > license.lic
-          ./apigw-emt-scripts-2.4.0-SNAPSHOT/build_anm_image.py --license=license.lic --default-cert --fed=anm/fed/anm.fed --metrics --merge-dir anm/merge-dir/apigateway --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
+          ./apigw-emt-scripts-2.4.0-SNAPSHOT/build_anm_image.py --license=license.lic --default-cert --fed=anm/fed/anm.fed --metrics --merge-dir anm/merge-dir/apigateway --parent-image=${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
       - name: Push image
         run: |
           docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
