--- a/.github/workflows/gateway.anm.deploy.yml
+++ b/.github/workflows/gateway.anm.deploy.yml
@@ -38,6 +38,18 @@ jobs:
           registry: ${{ env.dockerRegistry }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+      - name: Setup kubectl
+        run: |
+          mkdir  $HOME/.kube
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
+          aws eks --region eu-west-1 update-kubeconfig --name eks-amplify
+          kubectl version
       - name: Set image version
         run: |
           if [ "${{ github.event.inputs.version }}" ]; then
@@ -58,12 +70,6 @@ jobs:
       - name: Push image
         run: |
           docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
       - name: Update Helm-Value file
         run: |
           yq -i '.anm.imageTag="${{ env.IMAGE_TAG }}"' ../helm/aws-eks/axway-apim-on-aws-eks-values.yaml
