--- a/.github/workflows/gateway.apigw.deploy.yml
+++ b/.github/workflows/gateway.apigw.deploy.yml
@@ -1,9 +1,9 @@
 name: "1.(M) Deploy API-Gateways"
 
 env:
-  dockerRegistry: ghcr.io
-  dockerRepository: cwiechmann/axway-api-management-automated
-  baseImage: "base:77-20220228-1"
+  baseImage: ${{ secrets.BASE_IMAGE }}
+  dockerRegistry: ${{ secrets.DOCKER_REGISTRY }}
+  dockerRepository: ${{ secrets.DOCKER_REPO }}
   outImage: "manager"
   outImageVersion: "77-20220228-1"
 
@@ -37,6 +37,18 @@ jobs:
           registry: ${{ env.dockerRegistry }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Setup kubectl
+        run: |
+          mkdir  $HOME/.kube
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
+          aws eks --region ${{ secrets.AWS_REGION }} update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }}
+          kubectl version
       - name: Set image version
         run: |
           if [ "${{ github.event.inputs.version }}" ]; then
@@ -48,21 +60,15 @@ jobs:
             echo "IMAGE_TAG=${{ env.outImageVersion }}_$(echo ${date})" >> $GITHUB_ENV
           fi
       - name: Pull base image
-        run: docker pull ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }}
+        run: docker pull ${{ env.baseImage }}
       - name: Build API-Gateway image
         run: |
           tar xvfz apigw-emt-scripts-2.4.0-20220222.150412-10.tar.gz
           echo "${{ secrets.APIGATEWAY_LICENSE }}" | base64 -d > license.lic
-          ./apigw-emt-scripts-2.4.0-SNAPSHOT/build_gw_image.py --license=license.lic --merge-dir apigateway/merge-dir/apigateway --default-cert --fed=apigateway/fed/apigateway.fed --parent-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
+          ./apigw-emt-scripts-2.4.0-SNAPSHOT/build_gw_image.py --license=license.lic --merge-dir apigateway/merge-dir/apigateway --default-cert --fed=apigateway/fed/apigateway.fed --parent-image=${{ env.baseImage }} --out-image=${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
       - name: Push image
         run: |
           docker push ${{ env.dockerRegistry }}/${{ env.dockerRepository }}/${{ env.outImage }}:${{ env.IMAGE_TAG }}
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
       - name: Update Helm-Value file
         run: |
           yq -i '.apimgr.imageTag="${{ env.IMAGE_TAG }}"' ../helm/aws-eks/axway-apim-on-aws-eks-values.yaml
@@ -74,7 +80,5 @@ jobs:
       - name: Helm upgrade
         if: ${{ github.event.inputs.deploy }}
         run: |
-          mkdir  $HOME/.kube
-          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
           helm upgrade axway-apim -n apim -f ../helm/aws-eks/axway-apim-on-aws-eks-values.yaml https://github.com/Axway/Cloud-Automation/releases/download/apim-helm-2.10.1/helm-chart-axway-apim-2.10.1.tgz
 
